# gaby-vm

./: .clangd  .gitignore  AGENTS.md  AUTHORS  CMakeLists.txt  CMakePresets.json  LICENSE  NOTES.vixl  Package.swift  README.md
.agents/skills/translate-doc/: SKILL.md
.claude/: settings.json
.claude/hooks/: clang-format-edited.sh  run-tests-on-stop.sh
.claude/skills/: translate-doc
.github/workflows/: bench.yml  ci.yml
Sources/gaby_vm/src/: .clang-format  CMakeLists.txt  utils-vixl.h
bench/: CMakeLists.txt  README.md  baseline.cc  business.cc  native_baseline.cc  native_business.cc  native_jit.entitlements  native_runner.cc  native_runner.h  native_smoke.cc  runner.cc  runner.h  size_probe.cc  smoke.cc
bench/workloads/: mixed_workload_data.h  smoke_workload.s  smoke_workload_data.h
bench/workloads/business/: applogic.c  applogic_workload_data.h  fsm.c  fsm_workload_data.h  gen_business_workloads.sh  hash.c  hash_workload_data.h  oracle_data.h  parse.c  parse_workload_data.h  struct.c  struct_workload_data.h
ci/: bench-report.sh  bench-verify.sh  build.sh  ctest.sh  ios-bench.sh  ios-test.sh  size-report.sh  util.sh
cmake/: CompileFlags.cmake
demos/cli/: CMakeLists.txt  main.cc
demos/spm/: main.cc
docs/: README.md  architecture.md  build.md  conventions.md  ios.md  onboarding.md  onboarding.zh-cn.md  testing.md
docs/archive/: HANDOFF-predecode-cache-brainstorm.md  HANDOFF-predecode-cache-brainstorm.zh-cn.md  README.md  README.zh-cn.md
docs/archive/benchmarks/: baseline-benchmark-results-cache-2026-05-clearforwrite-helpers.md  baseline-benchmark-results-cache-2026-05-neon-inline.md  baseline-benchmark-results-cache-2026-05.md  baseline-benchmark-results-cache-2026-05.zh-cn.md
docs/archive/profiles/: gaby-vm-cache-hotpath-profile-2026-05.md  gaby-vm-cache-hotpath-profile-2026-05.zh-cn.md  gaby-vm-cache-hotpath-profile-2026-06-02.html  gaby-vm-cache-hotpath-profile-2026-06-02.md
docs/archive/superseded/: gaby-vm-dispatch-redesign-notes-2026-06-02.md  gaby-vm-dispatch-redesign-notes-2026-06-02.zh-cn.md  gaby-vm-modification-sketch.md  gaby-vm-vixl-port-live-assemble-review-2026-06-10.md  gaby-vm-vixl-port-live-assemble-review-2026-06-10.zh-cn.md  gaby-vm-vixl-sim-test-port-design-2026-06-08.md  gaby-vm-vixl-sim-test-port-design-2026-06-08.zh-cn.md  gaby-vm-vixl-sim-test-port-plan-2026-06-08.md
docs/refs/: README.md  README.zh-cn.md  baseline-benchmark-results-2026-05.md  baseline-benchmark-results-cache-2026-05-clearforwrite-helpers.md  baseline-benchmark-suite.md  ci.md  gaby-vm-business-bench-2026-06-08.md  gaby-vm-business-bench-2026-06-08.zh-cn.md  gaby-vm-business-bench-applogic-2026-06-09.md  gaby-vm-cache-hotpath-profile-2026-05-27.md  gaby-vm-cache-hotpath-profile-2026-05-27.zh-cn.md  gaby-vm-cache-hotpath-profile-2026-06-02.md  gaby-vm-dispatch-flatten-profile-2026-06-11.md  gaby-vm-fast-dispatch-synthesis-2026-07-03.md  gaby-vm-modification-sketch.md  gaby-vm-predecode-cache-data-in-stream-2026-06-10.html  gaby-vm-predecode-cache-data-in-stream-2026-06-10.md  gaby-vm-predecode-cache-design.md  gaby-vm-vixl-port-live-assemble-rewrite-2026-06-09.md  vixl-aarch64-simulator-architecture.md  vixl-decode-dispatch-pattern.md  vixl-extraction-map.md  vixl-fetch-decode-dispatch-deep-dive.html  vixl-fetch-decode-dispatch-deep-dive.md  vixl-fetch-decode-dispatch-deep-dive.zh-cn.md  vixl-overview.md
include/gaby_vm/: predecode_cache.h  shadow_runner.h  simulator.h  version.h
ios-runner/: .gitignore  generate.sh  project.yml
ios-runner/App/: main.m
ios-runner/Tests/: BaselineSuiteTests.mm  BenchTests.mm  SmokeTests.mm  VixlPortTests.mm
openspec/: config.yaml  project.md
openspec/changes/add-github-ci/: proposal.md  tasks.md
openspec/changes/add-ios-support/: design.md  index.html  proposal.html  proposal.md  tasks.md
openspec/changes/baseline-benchmark-harness/: design.md  overview.html  proposal.md  tasks.md
src/: .clang-format  CMakeLists.txt  version.cc.in
src/aarch64/: instructions-aarch64.cc  instructions-aarch64.h  simulator-aarch64.cc  simulator-aarch64.h
src/gaby_vm/: .clang-format  predecode_cache.cc  shadow_runner.cc  simulator.cc
test/: CMakeLists.txt  branch_hook_dispatch_test.cc  branch_hook_reentrancy_test.cc  embedding_stack.h  instructions_aarch64_constexpr_smoke_test.cc  ios_runner_entries.h  movprfx_protocol_abort_test.cc  movprfx_protocol_test.cc  predecode_cache_data_in_stream_test.cc  reentrancy_test.cc  shadow_runner_test.cc  simulator_constructor_stack_test.cc  simulator_correctness.cc  simulator_smoke.cc  smoke.cc  typed_register_io_abort_test.cc  typed_register_io_test.cc  workload_shadow_test.cc
test/test_support/vixl_asm/: .clang-format  CMakeLists.txt
test/test_support/vixl_asm/harness/: .clang-format  gaby_two_track_macros.h  gaby_two_track_main.h  island_smoke.cc  test-utils-stub.cc  two_track_harness_selftest.cc  two_track_harness_smoke.cc  vixl_port_entries.h  vixl_port_fp.cc  vixl_port_integer.cc  vixl_port_ios_all.cc  vixl_port_neon.cc  vixl_port_oracle.cc  vixl_port_oracle.h
test/test_support/vixl_asm/src/: assembler-base-vixl.h  code-buffer-vixl.cc  code-buffer-vixl.h  code-generation-scopes-vixl.h  invalset-vixl.h  macro-assembler-interface.h
test/test_support/vixl_asm/src/aarch64/: assembler-aarch64.cc  assembler-aarch64.h  assembler-sve-aarch64.cc  instruction-assembler-setters-aarch64.cc  macro-assembler-aarch64.cc  macro-assembler-aarch64.h  macro-assembler-sve-aarch64.cc
test/test_support/vixl_asm/test/: test-runner.cc  test-runner.h  test-utils.h
test/test_support/vixl_asm/test/aarch64/: test-assembler-aarch64.cc  test-assembler-fp-aarch64.cc  test-assembler-neon-aarch64.cc  test-simulator-inputs-aarch64.h  test-utils-aarch64.cc  test-utils-aarch64.h
test/vixl_port/: CMakeLists.txt  vixl_port_fixture.h  vixl_port_fp.cc  vixl_port_integer.cc  vixl_port_neon.cc  vixl_port_runner.cc  vixl_port_runner.h
tools/vixl_test_extract/: CMakeLists.txt  capture_macros.h  capture_state.cc  capture_state.h  extract_main.cc  fixture_writer.cc  fixture_writer.h  phase0_sample_tests.cc
(+126 files in other folders)
